first modif grafana

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -158,6 +158,19 @@ services:
       - cassandra-data:/var/lib/cassandra
     networks:
       - confluent
+    
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    depends_on:
+      - cassandra
+    networks:
+      - confluent
 
 volumes:
   cassandra-data:
